methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:27: error: expected start of definition
override def run {
         ^PictureMono2:34: error: Unmatched closing brace '}' ignored here
}
^